@@ -1,6 +1,5 @@
-DIST PacketTracer52.tar.gz 92711603 RMD160 6382c7f5d1286f0335a07178a7b29dc043ef3600 SHA1 469a2e064808ad0a5b86aa9efbea8d3419bbb90d SHA256 c35d68e5143fd1b424764161cd97a3c7366880f9b732a87c31d06eea1f8fc03b
 DIST PacketTracer521.tar.gz 93357690 RMD160 7b5d73104a3d2490cf87726cb1583e4218cdd437 SHA1 3a345fcba05fdecb825259762e841cb5dbe99720 SHA256 86d751139575bdd904698a059167adc0d88c954dde846ae642fe7ad37f51932e
-EBUILD packettracer-52.ebuild 2933 RMD160 a72a46390108fc7a05346fa042e29685411183fb SHA1 1b28604845a71c9d22edfdda7cbae11b70b5a283 SHA256 68e22bc9791e98cbc5229a7e08ba79e954777fd39b80cb876c407bfc79859d9d
+EBUILD packettracer-521-r1.ebuild 3020 RMD160 4a3ce9bc6dd552ff715ff039a917b524ea006ac4 SHA1 381ca0e876bf389d21f5db6ce464e5d0680cb1e8 SHA256 b0145e7308438081325bbcad7836fc9c7e59886855db94f6f96035f5953efd4d
 EBUILD packettracer-521.ebuild 2927 RMD160 3f5c673107f7dcfb59aa849195ff15cfb08109dc SHA1 8a0f81fea0fc754f03c034b6a1680ad184d4954f SHA256 26776802954fe56f118e41893d5a5679fcddff2621ad2c067145f4d7969a2b8d
-MISC ChangeLog 1516 RMD160 ec85ef0cb51416fb4654ecc73fe0830b2c68c1b8 SHA1 46c1b83c9d528750ab79c4fa6518c82da4d0fb2d SHA256 29f6c3cc62d306733f4c02cdfd65993340446eb8f6718b57622348ad34ba63c4
+MISC ChangeLog 1621 RMD160 a7ed86f98b1c096e4cc16c693b4def696a7e5e21 SHA1 cc6e7d6ce379e877aeeed57846c5e783a6503d73 SHA256 2deab8f316ca1c25a4e3b90c5275c88812b5ecbf432d78883306ad1d0c752518
 MISC metadata.xml 604 RMD160 d1b88107696f095f674c79d5b4512302af968eb1 SHA1 c91467f615e608f09b68048fa9bd1ecdb8975aae SHA256 de013db7d9e6f363aa6b0f79e967ddb646a10042eb673075dc905417f4d021c3
