@@ -1,6 +1,10 @@
 # ChangeLog for app-emulation/packettracer
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  07 Feb 2010; <slep@gentoo.org> -packettracer-52.ebuild,
+  +packettracer-521-r1.ebuild:
+  version bump
 
   19 Dec 2009; A. Vinogradov <spamslepnoga@inbox.ru>
   +packettracer-521.ebuild:
